--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 
 			<div class="d_list">
-				<a href=""><img src="Images/list.png" class="list"></a>
+				<a href=""><img src="Images/List.png" class="list"></a>
 			</div>
 
 			<div class="contact">
