--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>Lovelies</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Sofia&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap"
+	 rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montaga&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -25,7 +29,7 @@
 			</div>
 
 			<div class="d_list">
-				<a href=""><img src="Images/List.png" class="list"></a>
+				<a href=""><img src="images/List.png" class="list"></a>
 			</div>
 
 			<div class="contact">
@@ -55,8 +59,6 @@
 				</select>
 
 				<!-- <input type="search" id="search" /> -->
-
-				<!-- <a href=""><img src="list.png" class="list"></a> -->
 			</ul>
 
 			<input type="search" id="search" placeholder="search for" />
