--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="Dont_missss">
 					<div class="part1">
 						<div class="pt1_img">
-							<img src="images/pt1_image.png">
+							<img src="images/pt1_Image.png">
 							<div class="pt1_cont">
 								<p>Craig Bator <span class="p_span">- 27 Dec 2020</span></p>
 								<h3>Now Is the Time to Think About Your Small  Business Success</h3>
