--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
 			<input type="search" id="search" placeholder="search for" />
 			<!-- <img src="images/search2.png" width="" > -->
 		</nav>
+
+		<div>
+			<div class="mobile" id="mobileMenu">
+				<div class="side">
+					<ul>
+						<li><a href="index.html" id="home">Home</a></li>
+						<li><a href="#inter">International</a></li>
+						<li><a href="#">Sports</a></li>
+						<li><a href="#">Opinion</a></li>
+						<li><a href="#">Business</a></li>
+						<li><a href="#">Youth</a></li>
+						<li><a href="#">Entertainment</a></li>
+						<li><a href="#">Lifestyle</a></li>
+						<li><a href="#">Pages</a></li>
+					</ul>
+				</div>
+
+				<div class="contact_side">
+					<a href="https://www.Facebook.com" target="_blank"><img src="images/Facebook.png"></a>
+					<a href="https://twitter.com/i/flow/login" target="_blank"><img src="images/Twitter.png"></a>
+					<a href="https://www.instagram.com/accounts/login/" target="_blank"><img src="images/Instagram.png"></a>
+					<a href="https://www.youtube.com" target="_blank"><img src="images/Youtube.png"></a>
+				</div>
+			</div>
+
+		</div>
+		
 		<section class="news">
 			<div class="post1">
 				<div class="d_b">
