--- a/index.html
+++ b/index.html
@@ -261,6 +261,6 @@
 		</footer>
 	</main>
 
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="file.js"></script>
 </body>
 </html>
