--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="d_list">
-				<a href=""><img src="images/List.png" class="list"></a>
+				<a href=""><img src="images/List.png" class="list" id="list"></a>
 			</div>
 
 			<div class="contact">
