--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 			</div>
 
 			<div class="d_list">
-				<a href=""><img src="images/List.png" class="list" id="list"></a>
+				<img src="Images/list.png" class="list" id="list">
+				<div class="x" id="x" onclick="myFunction(this)"><img src="images/X.png"></div>
 			</div>
 
 			<div class="contact">
@@ -41,7 +42,7 @@
 		</div>
 		<nav class="navbar">
 			<ul>
-				<li><a href="" id="home">Home</a></li>
+				<li><a href="index.html" id="home">Home</a></li>
 				<li><img src="images/Line.png" class="home"></li>
 				<li><a href="">International</a></li>
 				<li><a href="">Sports</a></li>
@@ -62,7 +63,7 @@
 			</ul>
 
 			<input type="search" id="search" placeholder="search for" />
-			<!-- <img src="images/search2.png" width="" > -->
+			<!-- <img src="images/search2.png" width="20px" height="20px" > -->
 		</nav>
 
 		<div>
@@ -90,7 +91,7 @@
 			</div>
 
 		</div>
-		
+
 		<section class="news">
 			<div class="post1">
 				<div class="d_b">
@@ -148,7 +149,7 @@
 				<div class="Dont_missss">
 					<div class="part1">
 						<div class="pt1_img">
-							<img src="images/pt1_Image.png">
+							<img src="images/pt1_image.png">
 							<div class="pt1_cont">
 								<p>Craig Bator <span class="p_span">- 27 Dec 2020</span></p>
 								<h3>Now Is the Time to Think About Your Small  Business Success</h3>
