--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 
 			<div class="d_list">
-				<img src="Images/list.png" class="list" id="list">
+				<img src="Images/List.png" class="list" id="list">
 				<div class="x" id="x" onclick="myFunction(this)"><img src="images/X.png"></div>
 			</div>
 
